# koru-app-fork

./: .lintstagedrc.mjs  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: build-docker.prod.yml
.husky/: pre-commit
apps/api/: .env.example  .gitignore  Dockerfile  package.json  pyproject.toml
apps/api/api/: cf_middleware.py  dependencies.py  main.py
apps/api/api/core/: celery.py  config.py  exceptions.py  gocardless.py  rabbitmq.py  redis.py  security.py
apps/api/api/db/: database.py  utils.py
apps/api/api/middleware/: cloudflare_ip.py
apps/api/api/models/: __init__.py  account.py  base.py  connection.py  counterparty.py  merchant.py  transaction.py  user.py
apps/api/api/models/enums/: account.py  connection.py  transaction.py
apps/api/api/routers/: __init__.py  account.py  auth.py  connection.py  import_router.py  items.py  transaction.py  users.py  waitlist.py
apps/api/api/schemas/: email_base.py  emails.py  gocardless.py
apps/api/api/tasks/: __init__.py  gocardless.py  test.py  transaction.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 01e6a343ead0_allow_null_opposing_name.py  1e494eb57ce2_fix_usagetype_enum.py  20960f21b210_remove_unique_from_account_name.py  22566866436d_add_indexes.py  7f8c94e42aa7_add_connection_model.py  853209475af4_test_migration.py  8dd142df6766_use_internal_id_as_unique_index_in_.py  c752da0515ee_add_balance_offset_to_account.py  cc8021ddd806_update_transaction_indexes.py  d3766e1daeaf_first_user_model.py  d416a1e383f5_add_first_models.py  ef2faf281a8a_add_merchant_model.py  f537b94200d3_add_unique_constraint_raw_transaction_.py  f85d15a7d52a_make_value_time_optional.py
apps/api/scripts/: entrypoint.sh  generate-openapi.py
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
apps/mobile/app/(tabs)/: _layout.tsx  index.tsx  test.tsx
apps/mobile/src/: providers.tsx  splash.tsx
apps/mobile/src/app/: +not-found.tsx  _layout.tsx  modal.tsx  sign-in.tsx
apps/mobile/src/clients/: api.ts
apps/mobile/src/components/: EditScreenInfo.tsx  StyledText.tsx
apps/mobile/src/lib/: cookie.ts
apps/mobile/src/stores/: auth.store.ts
apps/web/: Dockerfile  example.env.local  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  manifest.json  page.tsx  providers.tsx
apps/web/src/clients/: api.ts
apps/web/src/components/: clientPing.tsx  createUser.tsx  logged-in.tsx  login.tsx
services/email/: .env.example  Dockerfile  package.json  tsconfig.json
services/email/src/: email-registry.ts  email.ts  env.ts  index.ts
(+27 files in other folders)
