[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.9",
]

# --- Ruff Configuration (Linter & Formatter) ---
[tool.ruff]
line-length = 88 # PEP 8 compatible (like Black)
target-version = "py312" # Minimum Python version to target

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "A",  # flake8-builtins
    "PT", # flake8-pytest-style
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]

# --- MyPy Configuration (Optional Static Typing) ---
[tool.mypy]
python_version = "3.12"
warn_return_any = true
# disallow_untyped_defs = true
disallow_incomplete_defs = true